# argosy-sigil

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TRADEMARKS.md
.github/workflows/: ci.yml  release.yml
bindings/android/: README.md  build.gradle.kts  consumer-rules.pro
bindings/android/src/main/cpp/: CMakeLists.txt  sigil_jni.c
bindings/android/src/main/kotlin/com/nendo/sigil/: Sigil.kt
bindings/go/: Makefile  README.md  go.mod  sigil.go  sigil_test.go
bindings/go/example/: main.go
bindings/python/: .gitignore  Makefile  README.md  build_sigil.py  pyproject.toml  test_sigil.py
bindings/python/sigil/: __init__.py
cli/: sigil.c
include/: sigil.h
src/: aes_xts.c  cnf_parser.c  filename.c  io_chd.c  io_cso.c  io_file.c  io_raw_cd.c  iso9660.c  ps2.c  ps3.c  psp.c  psvita.c  psx.c  sfo_parser.c  sigil.c  sigil_compat.h  sigil_internal.h  sigil_util.h  switch_cnmt.c  switch_keys.c  switch_nca.c  switch_nsp.c  switch_xci.c  threeds.c  wii.c  wiiu_wua.c  xbox360.c
tests/: CMakeLists.txt  integration_3ds.c  integration_gamecube.c  integration_helpers.h  integration_ps2.c  integration_psp.c  integration_psvita.c  integration_psx.c  integration_switch.c  integration_wii.c  integration_wiiu.c  unit_sfo.c  unit_switch_cnmt.c  unit_switch_nca.c  unit_xex.c
