# SPDX-License-Identifier: MPL-2.0

[build-system]
requires = ["setuptools>=77", "cffi>=1.15"]
build-backend = "setuptools.build_meta"

[project]
name = "argosy-sigil"
version = "0.1.0.dev0"
description = "Python bindings for the sigil title ID extraction library"
license = "MPL-2.0"
requires-python = ">=3.10"
dependencies = ["cffi>=1.15"]

[tool.setuptools]
packages = ["sigil"]
